--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="main-content">
   <div class="row">
-    <section class="span8">
+    <section class="span8 rounded-borders light-shadowed">
       <header class="out rounded-borders-btn">
         <h2>Mis Intereses</h2>
       </header>
@@ -195,7 +195,7 @@
     <!--end main content-->
 
     <!--sidebar-->
-    <aside class="span4" style="...">
+    <aside class="span4" style="background: none;">
 
       <div class="wrapper-padding rounded-borders light-shadowed" style="background: #ffffff;">
 
