--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -121,7 +121,7 @@
 
                     <hr>
                     <div class="text-center">
-                      <button type="submit" class="btn btn-dealhunter">Cambiar mi contraseña</button>
+                      <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Cambiar mi contraseña</button>
                     </div>
                   </fieldset>
               <% end %>
