--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
 <!--container-->
 <div class="container" id="main-content">
   <div class="row">
-    <section class="span8">
-      <header class="out">
+    <section class="span8 rounded-borders light-shadowed">
+      <header class="out rounded-borders-btn">
         <h2>Cambiar Contraseña</h2>
       </header>
 
@@ -19,7 +19,7 @@
                 <%= f.password_field :password, :class => "input-xlarge" %>
                 <hr>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-dealhunter">Cambiar Contraseña</button>
+                  <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Cambiar Contraseña</button>
                 </div>
             <% end %>
 
