--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,6 +2,7 @@
 
 <p>You can confirm your password change through the link below:</p>
 
-<p><%= link_to 'Cambiar mi contraseña', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<td align="center" width="120"><a href="<%= edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>" style="color:#fff; font-size:12px; text-decoration:none; text-align:center;">Cambiar mi password</a></td>
+
 
 <p>If you didn´t request the password change, ignore this email and your password will remain the same.</p>
