--- a/app/assets/stylesheets/dealhunter.css
+++ b/app/assets/stylesheets/dealhunter.css
@@ -12,6 +12,10 @@ a:focus {
 
 }
 
+a {
+    color: mediumaquamarine;
+}
+
 input::-moz-focus-inner {
     border: 0;
 }
@@ -317,7 +321,7 @@ header#top nav ul {
 
 .btn-dealhunter:active,
 .btn-dealhunter.active {
-    background-color: #003399   \9;
+    background-color: #003399    \9;
 }
 
 .btn-dealhunter-grey {
@@ -342,7 +346,7 @@ header#top nav ul {
 
 .btn-dealhunter-grey:active,
 .btn-dealhunter-grey.active {
-    background-color: #003399   \9;
+    background-color: #003399    \9;
 }
 
 .btn-group.open .btn.dropdown-toggle {
@@ -639,13 +643,14 @@ section h2 {
     border-top-style: solid;
     border-top-color: mediumaquamarine;
 }
-#footer-wrapper .container{
-  padding: 2%;
+
+#footer-wrapper .container {
+    padding: 2%;
 }
 
 #footer-wrapper .bg {
     background-color: #CCC;
-    }
+}
 
 #footer-top {
     padding-top: 20px;
@@ -1178,6 +1183,10 @@ ul.list-box-grey li span {
     background: #899fac;
 }
 
+footer {
+    position: relative;
+}
+
 .widget-calendar h3 {
     font-family: 'Open Sans', sans-serif;
     background-color: mediumaquamarine; /* red */
@@ -1233,7 +1242,6 @@ body#landing {
     width: 70%;
     height: auto;
 }
-
 
 #landing  #footer-middle {
     padding: 40px 0;
@@ -1438,14 +1446,15 @@ label.tweenty {
     width: 30.9%;
 }
 
-.modal-header{
+.modal-header {
     background: mediumaquamarine;
 }
-.modal-header h3{
+
+.modal-header h3 {
     color: white;
 }
 
-.modal-footer .btn{
+.modal-footer .btn {
     color: #ffffff;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background-color: rgb(23, 46, 117);
@@ -1453,6 +1462,112 @@ label.tweenty {
     *background-color: rgb(23, 46, 117);
     border-radius: 8px !important;
 
+}
+
+input {
+    border: 2px solid #dadada !important;
+    border-radius: 7px !important;
+}
+
+input:focus {
+    outline: none !important;
+    border-color: mediumaquamarine !important;
+    box-shadow: 0 0 10px mediumaquamarine !important;
+}
+
+.roundedTwo {
+    width: 28px;
+    height: 28px;
+    background: #fcfff4;
+
+    background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
+    margin: 20px auto;
+
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+
+    -webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+    box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+    position: relative;
+}
+
+.roundedTwo label {
+    cursor: pointer;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    left: 4px;
+    top: 4px;
+
+    -webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    -moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+
+    background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -o-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
+    background: linear-gradient(top, #222 0%, #45484d 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+}
+
+.roundedTwo label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    content: '';
+    position: absolute;
+    width: 9px;
+    height: 5px;
+    background: transparent;
+    top: 5px;
+    left: 4px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.roundedTwo label:hover::after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+    filter: alpha(opacity=30);
+    opacity: 0.3;
+}
+
+.roundedTwo input[type=checkbox]:checked + label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+
+.modal-header{
+    -webkit-box-shadow: 9px 9px 13px -4px black;
+    -moz-box-shadow: 9px 9px 13px -4px black;
+    box-shadow: 9px 9px 13px -4px black;
+}
+
+#invitar-amigo-box{
+   margin-top: 0;
+}
+
+#invitar-amigo-box hr{
+    margin-top: 0;
 }
 
 
@@ -2212,6 +2327,10 @@ label.tweenty {
         text-align: center;
     }
 
+    .light-shadowed {
+        box-shadow: none;
+    }
+
     /* page detail --------------------------- */
 
     #page-detail .nav-tabs > li {
@@ -2334,15 +2453,14 @@ label.tweenty {
     height: 90px;
 }
 
-
-#footer-middle{
+#footer-middle {
     padding: 0 !important;
 
 }
 
-.title-image{
+.title-image {
     height: 100px;
-    width: 100px ;
+    width: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
