--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -3,7 +3,7 @@
     <section class="span8 rounded-borders light-shadowed">
       <div id="recommend-to-friend" class="pull-right">
         <ul>
-          <li><h2><a href="#newBranchModal" role="button"  data-toggle="modal">Nueva sucursal</a></h2></li>
+          <li><h2><a href="#newBranchModal" role="button" data-toggle="modal">Nueva sucursal</a></h2></li>
 
         </ul>
       </div>
@@ -22,8 +22,10 @@
                   <div class="media-body">
                     <h4 class="media-heading"><%= branch.name %></a></h4>
                     <h5><%= branch.address_as_string %></h5>
-                  </div><!--end media-body-->
-                </div><!--end media-->
+                  </div>
+                  <!--end media-body-->
+                </div>
+                <!--end media-->
 
             <% end %>
 
@@ -39,7 +41,6 @@
                 <li><a href="#">&raquo;</a></li>
               </ul>
             </div>
-
 
 
           </article>
@@ -62,11 +63,12 @@
         </ul>
         <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
-          <li><a href="<%= edit_user_path(current_user)%>">Mi Perfil</a></li>
+          <li><a href="<%= edit_user_path(current_user) %>">Mi Perfil</a></li>
         </ul>
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
-          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>        </ul>
+          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>
+        </ul>
         </ul>
       </div>
       <!--<div id="bags">-->
@@ -74,8 +76,10 @@
       <!--<div id="block"></div>-->
       <!--</div>-->
       <!--</div>-->
-    </aside><!--end sidebar-->
-  </div><!--end container-->
+    </aside>
+    <!--end sidebar-->
+  </div>
+  <!--end container-->
 </div><!--end row-->
 
 
@@ -86,31 +90,37 @@
   </div>
   <div class="modal-body">
     <div id="invitar-amigo-box">
-      <%= semantic_nested_form_for [Branch.new()] do |f|%>
+      <%= semantic_nested_form_for [Branch.new()] do |f| %>
           <div id="nameFields">
             <label>Nombre: <%= f.input :name, :label => false %> </label>
           </div>
           <hr>
 
-          <%=f.inputs :for => [:address, f.object.address || Address.new] do |address|%>
-              <div id="nameFields">
-                <label>Calle: <%= address.input :street, :label => false %> </label>
+          <%= f.inputs :for => [:address, f.object.address || Address.new] do |address| %>
+              <div class="row">
+                <div id="nameFields" class="span3">
+                  <label>Calle: <%= address.input :street, :label => false %> </label>
+                </div>
+                <div id="nameFields" class="span3">
+                  <label>Número: <%= address.input :number, :label => false %> </label>
+                </div>
               </div>
-              <div id="nameFields">
-                <label>Número: <%= address.input :number, :label => false %> </label>
+              <div class="row">
+                <div id="nameFields" class="span3">
+                  <label>Provincia: <%= address.input :state, :label => false %> </label>
+                </div>
+                <div id="nameFields" class="span3">
+                  <label>Localidad: <%= address.input :city, :label => false %> </label>
+                </div>
               </div>
-              <div id="nameFields">
-                <label>Provincia: <%= address.input :state, :label => false %> </label>
+              <div class="row">
+                <div id="nameFields" class="span3">
+                  <label>País: <%= address.input :country, :as => :select, :prompt => "Seleccione País", :collection => Country.all, :label => false %> </label>
+                </div>
               </div>
-              <div id="nameFields">
-                <label>Localidad: <%= address.input :city, :label => false %> </label>
-              </div>
-              <div id="nameFields">
-                <label>País: <%= address.input :country, :as => :select, :prompt => "Seleccione País", :collection => Country.all,  :label => false %> </label>
-              </div>
-          <%end%>
-     </div>
-   </div>
+          <% end %>
+          </div>
+          </div>
           <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
             <button class="btn btn-vontrip" type="submit">Guardar</button>
@@ -118,4 +128,4 @@
       <% end %>
 
 
- </div>  <!--end Modal-->
+      </div>  <!--end Modal-->
