--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6308,3 +6308,11 @@ button.close {
     overflow: visible !important;
   }
 }
+
+.imgSize {
+
+    width: 150px;
+    height: 106px;
+    border: 1px solid mediumaquamarine;
+
+}
