--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -33,7 +33,7 @@
                         <div class="media hotel-item">
                           <a class="pull-left" href="#">
                             <% unless offer.photo.nil? %>
-                                <img src="<%= offer.photo %>" class="media-object">
+                                <img src="<%= offer.photo %>" class="media-object imgSize">
                             <%end%>
                           </a>
                           <div class="media-body">
