--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,7 +39,7 @@
 
     <h2 class="rounded-borders-btn">Detalle de Cuenta</h2>
     <ul class="aside-nav">
-        <% if current_user.user_role_id = 1 %>
+        <% if current_user.user_role_id == 1 %>
           <li><a href="<%= users_offers_company_user_path %>">Mis Ofertas</a></li>
           <li><a href="<%= users_branches_company_user_path %>">Mis sucursales</a></li>
          <% else %>
