--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -1,12 +1,8 @@
 <div class="container" id="main-content">
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
-      <div id="recommend-to-friend" class="pull-right">
-        <ul>
-          <li><h2><a href="#newBranchModal" role="button" data-toggle="modal">Nueva sucursal</a></h2></li>
+      <h2 id="recommend-to-friend" class="pull-right rounded-borders light-shadowed" href="#newBranchModal" role="button" data-toggle="modal">Nueva sucursal</h2>
 
-        </ul>
-      </div>
       <header class="out rounded-borders-btn">
         <h2>Sucursales</h2>
       </header>
