--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -1,12 +1,7 @@
 <div class="container" id="main-content">
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
-      <div id="recommend-to-friend" class="pull-right">
-        <ul>
-          <li><h2><a href="#myModalInvite" role="button"  data-toggle="modal">Nueva oferta</a></h2></li>
-
-        </ul>
-      </div><!--end recommend-to-friend-->
+        <h2 id="recommend-to-friend"  class="pull-right rounded-borders light-shadowed" href="#myModalInvite" role="button"  data-toggle="modal">Nueva oferta</h2>
       <header class="out rounded-borders-btn">
         <h2>Ofertas</h2>
 
