--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -3,7 +3,7 @@
     <section class="span8 rounded-borders light-shadowed">
       <div id="recommend-to-friend" class="pull-right">
         <ul>
-          <li><h2><a href="#myModalInvite" role="button"  data-toggle="modal">Nueva oferta</a></h2></li>
+          <li><h2><a href="<%= new_offer_path %>" role="button"  data-toggle="modal">Nueva oferta</a></h2></li>
 
         </ul>
       </div><!--end recommend-to-friend-->
@@ -165,7 +165,7 @@
   </div><!--end container-->
 </div><!--end row-->
 
-<div id="myModalInvite" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="myModalNewOffer" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="myModalLabel">Nueva oferta</h3>
