user-message style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 
           <div class="span6 offset3 clearfix" id="header-data">
             <nav class="pull-left">
-              <ul>
+              <ul class="span6">
                 <li class="user-message">Bienvenido <span><%= current_user.email %></span></li>
                 <li>
 
