--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6316,3 +6316,21 @@ button.close {
     border: 1px solid mediumaquamarine;
 
 }
+
+.imgCenter {
+
+
+    height: 200px;
+    width: 247px;
+    border: 1px solid mediumaquamarine;
+    text-align: center;
+
+}
+
+.align-right{
+    text-align: right;
+}
+
+.align-left{
+    text-align: left;
+}
