Remove links from offer titles in client_offers

--- a/app/views/users/offers_client_user.html.erb
+++ b/app/views/users/offers_client_user.html.erb
@@ -29,7 +29,7 @@
                         <%end%>
                       </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="<%= offer_path(offer)%>"><%= offer.name %></a></h4>
+                        <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
                         <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
                         <p><%=  Company.find_by_id(offer.company_id).name %></p>
                       </div><!--end media-body-->
@@ -64,7 +64,7 @@
                         <%end%>
                       </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="<%= offer_path(offer)%>"><%= offer.name %></a></h4>
+                        <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
                         <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
                         <p><%=  Company.find_by_id(offer.company_id).name %></p>
                       </div><!--end media-body-->
@@ -97,7 +97,7 @@
                         <%end%>
                       </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="<%= offer_path(offer)%>"><%= offer.name %></a></h4>
+                        <h4 class="media-heading"><a href="#"><%= offer.name %></a></h4>
                         <h5><%=offer.start_date.strftime('%d/%m/%Y') %> / <%= offer.end_date.strftime('%d/%m/%Y')%></h5>
                         <p><%= Company.find_by_id(offer.company_id).name %></p>
                       </div><!--end media-body-->
