--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,13 @@
   <%= stylesheet_link_tag 'bootstrap.css' %>
   <%= stylesheet_link_tag 'dealhunter.css' %>
   <%= stylesheet_link_tag 'formtastic.css' %>
+
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
   <script src="/../assets/bootstrap-dropdown.js"></script>
   <script src="/../assets/bootstrap-tab.js"></script>
   <script src="/../assets/bootstrap-modal.js"></script>
-
+  <script src="/../assets/jquery_nested_form.js"></script>
 
   <!--    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
   -->
